--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/LearningPool/adapt-contrib-reveal.git"
+    "url": "git@github.com:LearningPool/adapt-contrib-reveal.git"
   },
   "author": "AdaptLearning",
   "license": "GPL v3",
