--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "adapt-contrib-reveal",
   "version": "2.2.2",
+  "framework": ">=2.0.0",
   "repository": "git://github.com/LearningPool/adapt-contrib-reveal.git",
   "homepage": "https://github.com/LearningPool/adapt-contrib-reveal",
   "authors": [
